--- a/assets/templates/desktop_template.html
+++ b/assets/templates/desktop_template.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
     <main>
-        <section class="menu"></section>
-        <section class="header"></section>
-        <section class="content"></section>
+        <section class="menu">
+            <div>
+                <img src="../img/join-logo.svg" alt="">
+            </div>
+            <div class="menu-buttons">
+                <button><img src="../img/summary-icon.svg" alt="">Summary</button>
+                <button><img src="../img/addToTask-icon.svg" alt="">Add to Task</button>
+                <button><img src="../img/board-icon.svg" alt="">Borad</button>
+                <button><img src="../img/contacts.svg" alt="">Contacts</button>
+            </div>
+            <div class="menu-links">
+                <a href="">Privacy Policy</a>
+                <a href="">Legal notice</a>
+            </div>
+        </section>
+        <section class="main-content"> 
+            <div class="header">lorem imspunm,ffsefsfse</div>
+            <div class="content"></div>
+        </section>
     </main>
 </body>
 </html>
