--- a/style.css
+++ b/style.css
@@ -1,9 +1,74 @@
 body{
     margin: 0;
     box-sizing: border-box;
-    max-height: 100vh;
 }
 
 main{
     display: flex;
+    height: 100vh;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.main-content{
+    display: flex;
+    flex-direction: column;
+    width: calc(100% - 232px);
+}
+
+.menu{
+    background-color: rgba(42, 54, 71, 1);
+    width: 232px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    padding: 64px 0;
+    line-height: 19.2px;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 40px 20px 40px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 10;
+}
+
+.content{
+    background-color: #F6F7F8; 
+    height: 100%;   
+}
+
+.menu-buttons{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.menu-buttons button{
+    background: none;
+    border: none;
+    color: rgba(205, 205, 205, 1);
+    display: inline-flex;
+    gap: 8px;
+    align-items: center;
+    padding: 8px 56px;
+}
+
+.menu-buttons button img{
+    height: 30px;
+    width: 30px;
+}
+
+.menu-links{
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.menu-links a{
+    text-decoration: none;
+    color: rgba(205, 205, 205, 1);
 }
