--- a/assets/templates/desktop_template.html
+++ b/assets/templates/desktop_template.html
@@ -16,7 +16,7 @@
                 <button><img src="../img/summary-icon.svg" alt="">Summary</button>
                 <button><img src="../img/addToTask-icon.svg" alt="">Add to Task</button>
                 <button><img src="../img/board-icon.svg" alt="">Borad</button>
-                <button><img src="../img/contacts.svg" alt="">Contacts</button>
+                <button><img src="../img/contacts-icon.svg" alt="">Contacts</button>
             </div>
             <div class="menu-links">
                 <a href="">Privacy Policy</a>
