--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'Inter';
+    src: url('./assets/fonts/Inter/Inter-VariableFont_opsz\,wght.ttf') format('truetype');
+}
+
+*{
+    font-family: 'Inter', sans-serif;
+}
+
 body{
     margin: 0;
     box-sizing: border-box;
