updatet desktop-template

--- a/assets/templates/desktop_template.html
+++ b/assets/templates/desktop_template.html
@@ -14,7 +14,7 @@
             </div>
             <div class="menu-buttons">
                 <button><img src="../img/summary-icon.svg" alt="">Summary</button>
-                <button><img src="../img/addToTask-icon.svg" alt="">Add to Task</button>
+                <button><img src="../img/addTask-icon.svg" alt="">Add Task</button>
                 <button><img src="../img/board-icon.svg" alt="">Borad</button>
                 <button><img src="../img/contacts-icon.svg" alt="">Contacts</button>
             </div>
@@ -24,7 +24,7 @@
             </div>
         </section>
         <section class="main-content"> 
-            <div class="header">lorem imspunm,ffsefsfse</div>
+            <div class="header">Kanban Project Management Tool</div>
             <div class="content"></div>
         </section>
     </main>
