--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 *{
     font-family: 'Inter', sans-serif;
+    font-size: 16px;
 }
 
 body{
@@ -26,8 +27,7 @@ main{
 }
 
 .menu{
-    background-color: rgba(42, 54, 71, 1);
-    width: 232px;
+    background-color: #2A3647;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -37,12 +37,16 @@ main{
 }
 
 .header{
+    height: 56px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 20px 40px 20px 40px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
     position: relative;
     z-index: 10;
+    font-size: 20px;
+    font-weight: 400;
 }
 
 .content{
@@ -66,6 +70,12 @@ main{
     padding: 8px 56px;
 }
 
+.menu-buttons button:hover{
+    color: #FFFFFF;
+    background-color: #091931;
+    cursor: pointer;
+}
+
 .menu-buttons button img{
     height: 30px;
     width: 30px;
@@ -80,4 +90,9 @@ main{
 .menu-links a{
     text-decoration: none;
     color: rgba(205, 205, 205, 1);
+    padding: 8px 60px;
+}
+
+.menu-links a:hover{
+    background-color: #091931;
 }
