legal notice added

--- a/assets/templates/desktop_template.html
+++ b/assets/templates/desktop_template.html
@@ -41,7 +41,7 @@
         </div>
         <div class="menu-links">
           <a href="">Privacy Policy</a>
-          <a href="">Legal notice</a>
+          <a href="">Legal Notice</a>
         </div>
       </section>
       <section class="main-content">
