--- a/style.css
+++ b/style.css
@@ -161,3 +161,66 @@ main {
 .legals-header img:hover {
   background-color: lightgray;
 }
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 15px;
+}
+
+.title h1 {
+  font-size: 61px;
+  font-family: "Inter";
+  font-weight: 700;
+  line-height: 73.2px; 
+}
+
+.help-text  {
+  font-size: 27px;
+  line-height: 32.4px;
+  font-family: "Inter";
+  font-weight: 700;
+}
+
+.help-text p {
+  font-size: 16px;
+  font-family: "Inter";
+  font-weight: 400;
+  line-height: 19.2px;
+  gap: 16px;
+}
+
+.structure {
+  display: flex;
+  justify-content: center;
+  gap: 35px;
+}
+
+.structure-number {
+  font-size: 27px;
+  line-height: 32.4px;
+  font-family: "Inter";
+}
+
+.structure-title {
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+  font-family: "Inter";
+}
+
+.structure-text {
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Inter";
+  line-height: 19.2px;
+}
+
+.end-text {
+  font-size: 27px;
+  font-weight: 700;
+  font-family: "Inter";
+  line-height: 32.4px;
+  padding-top: 20px;
+}
