added help-button / added function to links

--- a/assets/templates/menu-template.html
+++ b/assets/templates/menu-template.html
@@ -2,12 +2,12 @@
   <img src="../assets/img/join-logo.svg" alt="" />
 </div>
 <div class="menu-buttons">
-  <button><img src="../assets/img/summary-icon.svg" alt="" />Summary</button>
-  <button><img src="../assets/img/addTask-icon.svg" alt="" />Add Task</button>
-  <button><img src="../assets/img/board-icon.svg" alt="" />Board</button>
-  <button><img src="../assets/img/contacts-icon.svg" alt="" />Contacts</button>
+  <a href="summary.html"><img src="../assets/img/summary-icon.svg" alt="" />Summary</a>
+  <a href="add-task.html"><img src="../assets/img/addTask-icon.svg" alt="" />Add Task</a>
+  <a href="board.html"><img src="../assets/img/board-icon.svg" alt="" />Board</a>
+  <a href="contacts.html"><img src="../assets/img/contacts-icon.svg" alt="" />Contacts</a>
 </div>
 <div class="menu-links">
-  <a href="">Privacy Policy</a>
-  <a href="">Legal Notice</a>
+  <a href="privacy-policy.html">Privacy Policy</a>
+  <a href="legal-notice.html">Legal Notice</a>
 </div>
