--- a/assets/templates/header-template.html
+++ b/assets/templates/header-template.html
@@ -1,1 +1,7 @@
-<div class="header-content">Kanban Project Management Tool</div>
+<div class="header-content">
+    Kanban Project Management Tool
+    <div class="header-buttons">
+        <!-- Hier kommt der Hilfe-Button und der User-Button rein -->
+         <a href="help.html"><img class="help-icon" src="../assets/img/help.svg" alt=""></a>
+    </div>
+</div>
