startet to add highlight active link - not working yet

--- a/assets/templates/menu-template.html
+++ b/assets/templates/menu-template.html
@@ -9,5 +9,5 @@
 </div>
 <div class="menu-links">
   <a href="privacy-policy.html">Privacy Policy</a>
-  <a href="legal-notice.html">Legal Notice</a>
+  <a id="legalNotice" href="legal-notice.html">Legal Notice</a>
 </div>
