--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ button:hover {
   display: flex;
   margin: 0 auto;
   max-width: 1440px;
-  height: 1024px;
+  height: 100vh;
 }
 
 .menu-content {
@@ -82,7 +82,7 @@ button:hover {
   padding: 8px 56px;
 }
 
-.menu-buttons a:hover {
+.menu-hover:hover {
   background-color: #3c4e67;
 }
 
@@ -103,12 +103,20 @@ button:hover {
   text-decoration: none;
   color: #a8a8a8;
   padding: 8px 60px;
+}
+
+.legals-hover {
   transition: transform 0.3s;
 }
 
-.menu-links a:hover {
+.legals-hover:hover {
   color: #29abe2;
   transform: scale(1.1);
+}
+
+.highlight-menu-links-as-active {
+  color: white !important;
+  background-color: #091931;
 }
 
 .highlight-legals-links-as-active {
