--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -133,22 +133,26 @@
 }
 
 .contact-img {
-    width: 20%;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .contact-dialog-form {
-  width: 80%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   gap: 15px;
-  padding-left: 32px;
+  max-width: 422px;
+  /* padding-left: 32px; */
 }
 
 .input-group {
   position: relative;
   display: flex;
   align-items: center;
-  width: 422px;
+  width: 100%;
 }
 
 input[type="text"],
