--- a/style.css
+++ b/style.css
@@ -177,8 +177,26 @@ main a {
   padding: 15px 24px;
 }
 
+.contacts-name{
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.contacts-email{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19.2px;
+}
+
+.contact-name-email{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
 .contacts-list{
-  background-color: beige;
+  background-color: white;
   width: 456px;
   height: 100%;
   overflow-y: auto;
@@ -200,6 +218,18 @@ main a {
   font-weight: 400;
   padding: 17px 36px;
 }
+
+.seperation-line-container{
+  padding: 8px 0;
+  
+}
+
+.seperation-line{
+  border: 1px solid rgba(209, 209, 209, 1);
+  border-radius: 3px;
+  
+}
+
 /* end contacts style */
 
 .legals-header {
