--- a/assets/templates/edit-contact.html
+++ b/assets/templates/edit-contact.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" href="../../styles/dialog.css" />
 
     <script src="../../script.js"></script>
+    <script src="../../js/render.js"></script>
     <script src="../../js/contacts.js"></script>
   </head>
   <body onload="init()">
-    <div class="overlay">
+    <!-- execute function when open the dialog / delete button -->
+    <button onclick="openEditContactDialog(0)">Test-load</button>
+
+
+
+    <div id="dialogEditContact" class="overlay d-none">
       <div class="contact-dialog">
         <div class="contact-dialog-side-header">
           <img
@@ -20,7 +26,11 @@
             alt="Join Logo"
           />
           <h1 class="contact-dialog-title">Edit contact</h1>
-          <img class="contact-dialog-vector" src="../img/edit-contact-vector.svg" alt="" />
+          <img
+            class="contact-dialog-vector"
+            src="../img/edit-contact-vector.svg"
+            alt=""
+          />
         </div>
 
         <div class="contact-dialog-content">
@@ -29,13 +39,21 @@
           </div>
           <div class="contact-dialog-form-wrapper">
             <div class="close-button-container">
-              <button class="close-button">
+              <button onclick="toggleDisplayNone('dialogEditContact')" class="close-button">
                 <img src="../img/close-button.svg" alt="" />
               </button>
             </div>
-            <form class="contact-dialog-form">
+            <form
+              onsubmit="saveEditedContacts(event, 0)"
+              class="contact-dialog-form"
+            >
               <div class="input-group">
-                <input id="inputEditName" type="text" placeholder="Name" />
+                <input
+                  id="inputEditName"
+                  type="text"
+                  placeholder="Name"
+                  required
+                />
                 <img
                   class="input-icon"
                   src="../img/person-form-icon.svg"
@@ -43,7 +61,12 @@
                 />
               </div>
               <div class="input-group">
-                <input id="inputEditMail" type="email" placeholder="E-Mail" />
+                <input
+                  id="inputEditMail"
+                  type="email"
+                  placeholder="E-Mail"
+                  required
+                />
                 <img
                   class="input-icon"
                   src="../img/mail-form-icon.svg"
@@ -51,7 +74,7 @@
                 />
               </div>
               <div class="input-group">
-                <input id="inputEditPhone" type="tel"/>
+                <input id="inputEditPhone" type="tel" required />
                 <img
                   class="input-icon"
                   src="../img/phone-form-icon.svg"
@@ -63,8 +86,6 @@
                 <button type="submit" class="btn save">Save ✓</button>
               </div>
             </form>
-            <button onclick="loadContactsToInput(0)">Test-load</button>
-            <button onclick="saveEditedContacts(0)">Test-safe</button>
           </div>
         </div>
       </div>
