updated style.css and add-contact.html

--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ main a {
   border-bottom-right-radius: 30px;
 }
 
-aside img {
+.add-contact-aside-img {
   width: 55.6px;
   height: 66.48px;
   position: fixed;
