--- a/assets/templates/add-contact.html
+++ b/assets/templates/add-contact.html
@@ -10,7 +10,9 @@
   <body>
     <div class="overlay">
       <div class="contact-dialog">
-        <button class="close-button">&times;</button>
+        <button class="close-button">
+          <img src="../img/close-button.svg" alt="" />
+        </button>
         <!-- Linke Seite mit Titel und Logo -->
         <div class="contact-side">
           <img class="contact-dialog-logo" src="../img/join-logo.svg"alt="Join Logo"/>
@@ -25,19 +27,19 @@
             <img src="../img/profil.png" alt="">
           </div>
           <form class="contact-form">
-            <div class="input-group contact">
+            <div class="input-group">
               <input type="text" placeholder="Name" />
               <img class="input-icon" src="../img/person-form-icon.svg" alt=""/>
             </div>
-            <div class="input-group contact">
+            <div class="input-group">
               <input type="email" placeholder="Email" />
               <img class="input-icon" src="../img/mail-form-icon.svg" alt="" />
             </div>
-            <div class="input-group contact">
+            <div class="input-group">
               <input type="tel" placeholder="Phone" />
               <img class="input-icon" src="../img/phone-form-icon.svg" alt="" />
             </div>
-            <div class="contact-form-buttons">
+            <div class="contact-form-buttons two-btn">
               <button type="button" class="btn-cancel">Cancel X</button>
               <button type="submit" class="btn-create">Create contact ✓</button>
             </div>
