--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@ button:hover {
   cursor: pointer;
 }
 
+.legals-padding {
+  padding: 110px 40px 0 96px;
+}
+
 .container {
   display: flex;
   margin: 0 auto;
