updated style for main class

--- a/style.css
+++ b/style.css
@@ -165,6 +165,9 @@ button:hover {
   background-color: #f6f7f8;
   height: calc(100% - 56px);
   overflow-x: hidden;
+}
+
+.contact-main {
   display: flex;
 }
 
