updated contact html

--- a/assets/templates/edit-contact.html
+++ b/assets/templates/edit-contact.html
@@ -17,8 +17,8 @@
     </div>
 
     <div class="contact-dialog-content">
-      <div class="contact-img">
-        <img src="../assets/img/temp-contact-dummy.svg" alt="" />
+      <div id="contact-dialog-user-image" class="contact-img">
+        
       </div>
       <div class="contact-dialog-form-wrapper">
         <div class="close-button-container">
