updated contact html

--- a/style.css
+++ b/style.css
@@ -265,6 +265,11 @@ main a {
   cursor: pointer;
 }
 
+.add-contact-button:hover {
+  background-color: #29abe2;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
+}
+
 .contacts-info{
   display: flex;
   flex-direction: column;
